--- a/_src/scss/theme/large/_templates.scss
+++ b/_src/scss/theme/large/_templates.scss
@@ -23,7 +23,7 @@ body.home {
   }
   span.input-left {
     width:47%;
-    margin-right:3%;
+    margin-right:6%;
   }
   input.register {
     @include small-s;
